--- a/01_data_processing.Rmd
+++ b/01_data_processing.Rmd
@@ -1,7 +1,10 @@
 ---
 title: "01_data_processing"
-output: html_notebook
-editor_options: 
+author: "Flora"
+output:
+  html_document:
+    df_print: paged
+editor_options:
   chunk_output_type: inline
 ---
 
